# python-gen-tries

./: .env  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  benchmark_gentri.py  conf.py  index.rst  profile.json  pyproject.toml  python-gen-tries.code-workspace  test-requirements.txt  test_plan.py
bench/: bench_performance.py  bench_w_pytest_benchmark.py  benchmark_gentri.py
docs/: conf.py  gen-docs.sh  index.rst
docs /html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs /html/_sources/: index.rst.txt
docs /html/_sources/docs/source/: modules.rst.txt  tests.gentrie.rst.txt  tests.rst.txt
docs /html/_sources/source/: index.rst.txt
docs /html/docs/source/: conf.html  gentrie.html  modules.html
docs /html/source/: index.html
docs/html/: .buildinfo.bak  benchmarks.html  conf.html  genindex.html  gentrie.html  gentrie.trie.html  index.html  modules.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  usage.html
docs/html/_sources/: index.rst.txt  reference.rst.txt  usage.rst.txt
docs/html/_static/: documentation_options.js
docs/html/source/: conf.html  gentrie.html  modules.html
docs/source/: architectural_graph.mermaid  benchmarks.rst  conf.py  usage.rst
docs/source/_static/benchmarks/: prefixed_by_average_kops_per_second_by_runtime_validation.xcf
examples/: assigning_values_to_entries.py  by_letter.py  by_number.py  by_numeric_vector.py  by_tuple.py  by_word.py  dictionary_syntax_examples.py  prefixed_by_example.py  prefixes_example.py  url_suffixes.py  word_suggestion.py
gentrie/: __init__.py
src/gentrie/: __init__.py  exceptions.py  types.py  validation.py
src/gentrie/trie/: access.py  base.py  collection.py  removal.py  storage.py  traversal.py  trie_mixins.py
src/gentries/: __init__.py  generalized.py  patrica.py
tests/: test_generalized.py  test_genetries.py
tests/gentrie/: BUILD.bazel  benchmark_gentri.py  test_gentri.py
