
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gentrie"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".trunk/",
    ".git/",
    ".gitignore",
    "coverage/",
]

[project]
name = "gen-tries"
authors = [
    {name = "Jerilyn Franz", email = "jerilyn.franz@snowhare.com"}
]
maintainers = [
    {name = "Jerilyn Franz", email = "jerilyn.franz@snowhare.com"}
]
description = "Generalized trie implementation"
readme = "README.md"
keywords = ["trie"]
license = { file = "LICENSE" }
version = "0.1.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.10"
dependencies = [
    'importlib-metadata; python_version>="3.10"'
]

[project.urls]
Homepage = "https://github.com/snowhare/python-gen-tries"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/snowhare/python-gen-tries.git"
Issues = "https://github.com/snowhare/python-gen-tries/issues"
Changelog = "https://github.com/snowhare/python-gen-tries/blob/main/CHANGELOG.md"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
max-complexity = 10

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']
line-length = 120
include_trailing_comma = false

[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
suggestion-mode = 'yes'
